# quipcl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: GenerateRelease.yml
quip/: CMakeLists.txt  Clipboard.cpp  Clipboard.h  Config.hpp  File.hpp  HexSequencer.hpp  History.hpp  clipboard.cpp  clipboard.h  quip.cpp
